Added js scripts in webpack

--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -19,8 +19,8 @@
                 <li><a href="{{ path('home') }}">Главная</a></li>
                 <li><a href="{{ path('services') }}">Услуги</a></li>
                 <li><a href="{{ path('blog') }}">Блог</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li id="octInf"><a href="#" id="FotRg">+38(066)010-51-78<br><small>octowice@gmail.com</small></a></li>
+                <li><a href="{{ path('home') }}#scrlO">Контакты</a></li>
+                <li id="octInf"><a href="{{ path('home') }}#scrlO" id="FotRg">+38(066)010-51-78<br><small>octowice@gmail.com</small></a></li>
             </ul>
         </div>
     </div>
