--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,7 @@
 
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
+        {{ encore_entry_script_tags('showUp') }}
     {% endblock %}
 
     </body>
