--- a/public/adaptiveMenu/adaptiveMenu.css
+++ b/public/adaptiveMenu/adaptiveMenu.css
@@ -15,10 +15,13 @@
     height: 55px;
     background-color: #333;
     position: relative;
-
-
 }
-
+#path{
+    text-decoration: none;
+}
+#path:hover{
+    text-decoration: none;
+}
 .header div {
     display: flex;
     flex-direction: row;
@@ -47,6 +50,7 @@ span {
     display: none;
 
 
+
 }
 .nav__item {
     display: block;
@@ -63,6 +67,8 @@ span {
 
 .nav__item:hover{
     background-color: black;
+    text-decoration: none;
+    color: white;
 }
 
 /*.nav__item:not(:first-of-type) {*/
