--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -23,5 +23,14 @@
                 </nav>
             </div>
         </div>
+        <script>
+            window.addEventListener("load", function() {
+                var svgObject = document.getElementById('object').contentDocument;
+                var element = svgObject.getElementById('svg');
+                element.onclick = function () {
+                    window.location.href = '/';
+                };
+            });
+        </script>
     </section>
 
