--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -257,7 +257,7 @@
                                     <p>Наши услуги</p>
                                 </div>
                             </a>
-                            <a href="{{ path('home') }}#scrlO" id="noBorder">
+                            <a  id="noBorder">
                                 <div class="twoButton">Заказать звонок</div>
                             </a>
                         </div>
@@ -339,7 +339,7 @@
                             Недорогие сайты по всей Украине вы можете заказать в веб-студии OctoWice, наше сотрудничество не будет безуспешным, мы сможем повысить вовлеченность аудитории, повысить конверсию и в конце концов сделать сайт отличающимся отменным дизайном, продуманной структурой и отличной работой.
                             Свяжитесь с нами!
                         </p>
-                        <button class="readmore" id="button_show" onclick="showP();">Читать дальше</button>
+                        <button class="readmore" id="button_show" onclick="showP()">Читать дальше</button>
                     </div>
                 </div>
             </div>
@@ -352,11 +352,11 @@
                         <p><small><i>Свяжись с нами. Работаем с 10:00 - 19:00</i></small></p>
                         <div class="col-lg-12 col-md-12 conFImg">
                             <div class="oneObj">
-                                <i class="fas fa-phone"></i>
+                                <i onclick="window.location.href = 'tel:38(066)010-51-78'" class="fas fa-phone"></i>
                                 <p><small>38(066)010-51-78</small></p>
                             </div>
                             <div class="twoObj">
-                                <i class="fas fa-envelope"></i>
+                                <i onclick="window.location.href = 'mailto:octowice@gmail.com'" class="fas fa-envelope"></i>
                                 <p><small>octowice@gmail.com</small></p>
                             </div>
                         </div>
@@ -368,4 +368,14 @@
             )) }}
     </section>
 </main>
+<script>
+        function showP() {
+            let list = document.getElementsByClassName('willHide');
+            for (let i = 0; i < list.length; i++) {
+                list[i].style.display = 'block';
+            }
+            document.getElementById('back').removeAttribute('class');
+            document.getElementById('button_show').style.display = 'none';
+        }
+</script>
 {% endblock %}
