--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -576,6 +576,7 @@
 
     .BuCen {
         margin-top: 40px;
+        background-color: red;
     }
 
     .posSh .row {
@@ -584,7 +585,7 @@
 
 
     .BuCen p {
-        color: black;
+        color: white;
         font-weight: 700;
         /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
@@ -1122,10 +1123,11 @@
 
     .BuCen {
         margin-top: 40px;
+        background-color: red;
     }
 
     .BuCen p {
-        color: black;
+        color: white;
         font-weight: 100;
         /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
@@ -1602,6 +1604,9 @@
         font-size: 30px !important;
         top: 25px;
         position: relative;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
     }
     .octH p{
         top: 25px;
@@ -3019,6 +3024,20 @@
     }
     @media only screen and (max-width: 320px) {
 
+        .conFImg{
+           display: none !important;
+        }
+        .conFImg-mobile{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+        }
+        .conFImg-mobile i{
+            margin-right: 4px;
+
+        }
+
         .blockOne, .blockTwo, .blockThere {
             display: none;
         }
@@ -3191,8 +3210,8 @@
         }
 
         #octoImg {
-            height: 100%;
-            top: 12%;
+            height: 96%;
+            top: 15%;
             left: 0;
             position: absolute;
             z-index: -1;
@@ -3434,7 +3453,7 @@
 
         .FourSec {
             max-width: 100%;
-            height: 730px;
+            height: 145vh;
         }
 
         .oneObj, .twoObj {
