--- a/public/Blog/blog.css
+++ b/public/Blog/blog.css
@@ -77,8 +77,7 @@ body {
     border-radius: 10px; }
 
 .oneObj, .twoObj {
-  background-color: white;
-  height: 200px; }
+  background-color: white; }
 
 .infOneObj h1 {
   /*padding: 70px 70px 5px 40px;*/
