--- a/public/style/style.css
+++ b/public/style/style.css
@@ -411,6 +411,10 @@ body {
   width: 62%;
   margin: 20px 0; }
 
+.conFImg-mobile{
+  display: none;
+}
+
 .butnInFTwo {
   color: white;
   font-size: 23px;
