--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Главная{% endblock %}
 {% block body %}
     <nav>
         <section id="mainUp">
