--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}О нас{% endblock %}
+{% block title %}Услуги{% endblock %}
 
 {% block body %}
     <div class="container">
