Maybe this one?

--- a/templates/pages/articlePage.html.twig
+++ b/templates/pages/articlePage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ articles.slug.title }}{% endblock %}
+{% block title %}{{ articles.title }}{% endblock %}
 
 {% block body %}
     <nav id="imgBgrd">
