--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>{% block titile %}{% endblock %}</title>
 
         {% block stylesheet %}
             <link rel="stylesheet" href="/style/style.css">
