--- a/templates/pages/blogPage.html.twig
+++ b/templates/pages/blogPage.html.twig
@@ -12,7 +12,7 @@
                 <div class="col-lg-12 col-md-12 navInBlog">
                     <div>
                         <h1>Блог</h1>
-                        <p>тут немного текста о нас</p>
+                        <p>интересные и увлекательные статьи</p>
                     </div>
                 </div>
             </div>
