--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -7,7 +7,7 @@
             <a  target="_blank" href="https://www.instagram.com/octowice/">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a  target="_blank" href="#">
+            <a  target="_blank" href="https://t.me/pashakost">
                 <i class="fab fa-telegram" aria-hidden="true"></i>
             </a>
         </div>
