Add links part 2

--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="servButton">
-                    <a id="noBorder" href="#"><h2>Наши услуги</h2></a>
+                    <a id="noBorder" href="{{ path('services') }}"><h2>Наши услуги</h2></a>
                 </div>
             </div>
             <div class="container" id="mobile-types">
@@ -119,7 +119,7 @@
                 <div class="servButtonMobile">
                     <a id="noBorder" href="{{ path('services') }}"><h2>Наши услуги</h2></a>
                 </div>
-                <img src="/img/Elipse-mobile.png" alt="" id="mobile-line">
+                <img src="/img/Elipse-mobile.png" alt="elipse" id="mobile-line">
             </div>
         </section>
         <section class="TwoSec">
