--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="format-detection" content="telephone=no">
-        <title>{% block titile %}{% endblock %}</title>
+
+        <title>{% block title %}{% endblock %}</title>
 
         {% block stylesheet %}
             <link rel="stylesheet" href="/style/style.css">
